{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 61,
  "lineage": "93a2a785-c51c-bad1-782e-816d1d288aee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013496fc79fcb3dfe",
            "association_id": "eipassoc-01b4617f0876b3571",
            "domain": "vpc",
            "id": "eipalloc-013496fc79fcb3dfe",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0e46c30d430073bbe",
            "private_dns": "ip-10-0-101-214.ca-central-1.compute.internal",
            "private_ip": "10.0.101.214",
            "public_dns": "ec2-99-79-151-30.ca-central-1.compute.amazonaws.com",
            "public_ip": "99.79.151.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_igw_eip"
            },
            "tags_all": {
              "Name": "demo_igw_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04fe2563a02dced49",
            "arn": "arn:aws:ec2:ca-central-1:392159187067:instance/i-05c6d55a2130fc39d",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c6d55a2130fc39d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093fce52d7851924b",
            "private_dns": "ip-10-0-101-164.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.164",
            "public_ip": "3.96.146.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e403cb989edaad2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4496a4d1dcd7c25",
            "tags": {
              "Name": "Ubuntu EC2 Server"
            },
            "tags_all": {
              "Name": "Ubuntu EC2 Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb90cd7e785e939f"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:internet-gateway/igw-0aca83996b7ac5ac1",
            "id": "igw-0aca83996b7ac5ac1",
            "owner_id": "392159187067",
            "tags": {
              "Name": "demo_igw"
            },
            "tags_all": {
              "Name": "demo_igw"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013496fc79fcb3dfe",
            "association_id": "eipassoc-01b4617f0876b3571",
            "connectivity_type": "public",
            "id": "nat-0229e5953aa9b2a94",
            "network_interface_id": "eni-0e46c30d430073bbe",
            "private_ip": "10.0.101.214",
            "public_ip": "99.79.151.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4496a4d1dcd7c25",
            "tags": {
              "Name": "demo_nat_gateway"
            },
            "tags_all": {
              "Name": "demo_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:route-table/rtb-0eea2750a88ac7cdb",
            "id": "rtb-0eea2750a88ac7cdb",
            "owner_id": "392159187067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0229e5953aa9b2a94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_private_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_private_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07268660197eee921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:route-table/rtb-0737c51fe8a5bc2c4",
            "id": "rtb-0737c51fe8a5bc2c4",
            "owner_id": "392159187067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aca83996b7ac5ac1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_public_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_public_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07268660197eee921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0438699dd2abf6067",
            "route_table_id": "rtb-0eea2750a88ac7cdb",
            "subnet_id": "subnet-06d744a17265d3c7c"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001139075354be58c",
            "route_table_id": "rtb-0eea2750a88ac7cdb",
            "subnet_id": "subnet-0aa596c274be2bbdf"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071143a0accdde518",
            "route_table_id": "rtb-0eea2750a88ac7cdb",
            "subnet_id": "subnet-0eacc6f4380f244b7"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075bef78cb12148f9",
            "route_table_id": "rtb-0737c51fe8a5bc2c4",
            "subnet_id": "subnet-0e4496a4d1dcd7c25"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000f21fa7c0818170",
            "route_table_id": "rtb-0737c51fe8a5bc2c4",
            "subnet_id": "subnet-0a89de440f36b4d44"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d75ef5a45c2725",
            "route_table_id": "rtb-0737c51fe8a5bc2c4",
            "subnet_id": "subnet-0ba5c078623e99ea0"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:subnet/subnet-06d744a17265d3c7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d744a17265d3c7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "392159187067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:subnet/subnet-0aa596c274be2bbdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa596c274be2bbdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "392159187067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:subnet/subnet-0eacc6f4380f244b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eacc6f4380f244b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "392159187067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:subnet/subnet-0e4496a4d1dcd7c25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4496a4d1dcd7c25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "392159187067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:subnet/subnet-0a89de440f36b4d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a89de440f36b4d44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "392159187067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:subnet/subnet-0ba5c078623e99ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba5c078623e99ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "392159187067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07268660197eee921"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:392159187067:vpc/vpc-07268660197eee921",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c7e4fa7aaf7e1b9",
            "default_route_table_id": "rtb-0e15f1482cac3219f",
            "default_security_group_id": "sg-0cb90cd7e785e939f",
            "dhcp_options_id": "dopt-0c8891d56d513bab5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07268660197eee921",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e15f1482cac3219f",
            "owner_id": "392159187067",
            "tags": {
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}